--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "npm": "^7.16.0",
+    "vue": "^3.1.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
