--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.6.5",
     "npm": "^7.16.0",
     "vue": "^3.1.1",
     "vue-router": "^4.0.0-0"
