--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "firebase": "^8.6.5",
