--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.6.5",
     "npm": "^7.16.0",
     "vue": "^3.1.1",
+    "vue-cli": "^2.9.6",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
