--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@vue/cli": "^4.5.13",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "firebase": "^8.6.5",
