--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "firebase": "^8.6.5",
+    "gsap": "^3.7.0",
     "npm": "^7.16.0",
     "vue": "^3.1.1",
     "vue-cli": "^2.9.6",
