--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.5",
     "firebase": "^8.6.5",
     "gsap": "^3.7.0",
+    "node-sass": "^6.0.1",
     "npm": "^7.16.0",
+    "sass-loader": "10.2",
     "vue": "^3.1.1",
     "vue-cli": "^2.9.6",
     "vue-router": "^4.0.0-0"
